* Update File and Mark6 datastreams for interlaced VDIF to improve multiplexing
  - TODO: Set nGap to fraction of second rather than fixed number of frames?
* VDIF file reading: don't bail if seeking fails, just don't perform file checking
* startdifx: when run with --wait, skip jobs whose end time has passed
* startdifx: when run with --wait, count down time to start

Version 2.6
~~~~~~~~~~~
* Some improvements to VDIF file reading for very gappy data
* Some improvements to VDIF for frame sizes greatly differing from 5000 bytes
* Some improvements in opening input files; reattempts on NFS-typical errors of "EAGAIN Resource temporarily unavailable"
* Reduce NFS load: .input file is read only by FxManager node and its content is shared with other nodes via MPI Broadcast
* Remove array that was mooted when per-band weights were introduced
* Allow DifxParameter message to specify new stop time, then cleanly shut down at that time.
* DifxParameters with <to></to> blocks are compared against the job name.
* startdifx: end difxlog process after every job when running with joblist
* genmachines: fixed support for multiple input files
* PCAL: allow tone intervals denser than an integer MHz (Wettzell twin telescope workaround)
* Support for IPP > 9 (specifically IPP 2018)
* genmachines and mark6 datastream updates
* add mark6 activity difx message to mark6 datastream
* Implement Mark5B datastream over Mark6
* Corrected the processing of double sideband complex data (both upper sense and lower sense)
* Version for DiFX-2.6, Mar 4, 2019

Version 2.5
~~~~~~~~~~~
* Another 0.5ns jitter was found in Mark5B processing for data rates >= 2 Gbps.  This is now fixed (2015 Feb 22 -- WFB)
* Slightly more instructive messages when model files have disagreements with .calc files.
* Check for time disagreements in polyco headers: the fractional MJD is supposed to be definitive, while the HHMMSS value can be rounded